PLANET-5609 Make sure existing Covers blocks have the grid layout
This is possible by setting the layout to grid by default, instead of carousel

--- a/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
+++ b/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
@@ -114,8 +114,11 @@
       width: 24px;
       height: 3px;
       margin: 0 4px;
-      cursor: pointer;
       background: rgba(136, 136, 136, 0.5);
+
+      &:not(.disabled) {
+        cursor: pointer;
+      }
 
       &.active {
         background: black;
